parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> json
Rule 1     json -> LBRACKET elements RBRACKET
Rule 2     elements -> object COMMA elements
Rule 3     elements -> object
Rule 4     object -> LBRACE members RBRACE
Rule 5     members -> pair COMMA members
Rule 6     members -> pair
Rule 7     pair -> STRING COLON value
Rule 8     value -> STRING
Rule 9     value -> NUMBER
Rule 10    value -> object

Terminals, with rules where they appear

COLON                : 7
COMMA                : 2 5
LBRACE               : 4
LBRACKET             : 1
NUMBER               : 9
RBRACE               : 4
RBRACKET             : 1
STRING               : 7 8
error                : 

Nonterminals, with rules where they appear

elements             : 1 2
json                 : 0
members              : 4 5
object               : 2 3 10
pair                 : 5 6
value                : 7

Parsing method: LALR

state 0

    (0) S' -> . json
    (1) json -> . LBRACKET elements RBRACKET

    LBRACKET        shift and go to state 2

    json                           shift and go to state 1

state 1

    (0) S' -> json .



state 2

    (1) json -> LBRACKET . elements RBRACKET
    (2) elements -> . object COMMA elements
    (3) elements -> . object
    (4) object -> . LBRACE members RBRACE

    LBRACE          shift and go to state 5

    elements                       shift and go to state 3
    object                         shift and go to state 4

state 3

    (1) json -> LBRACKET elements . RBRACKET

    RBRACKET        shift and go to state 6


state 4

    (2) elements -> object . COMMA elements
    (3) elements -> object .

    COMMA           shift and go to state 7
    RBRACKET        reduce using rule 3 (elements -> object .)


state 5

    (4) object -> LBRACE . members RBRACE
    (5) members -> . pair COMMA members
    (6) members -> . pair
    (7) pair -> . STRING COLON value

    STRING          shift and go to state 10

    members                        shift and go to state 8
    pair                           shift and go to state 9

state 6

    (1) json -> LBRACKET elements RBRACKET .

    $end            reduce using rule 1 (json -> LBRACKET elements RBRACKET .)


state 7

    (2) elements -> object COMMA . elements
    (2) elements -> . object COMMA elements
    (3) elements -> . object
    (4) object -> . LBRACE members RBRACE

    LBRACE          shift and go to state 5

    object                         shift and go to state 4
    elements                       shift and go to state 11

state 8

    (4) object -> LBRACE members . RBRACE

    RBRACE          shift and go to state 12


state 9

    (5) members -> pair . COMMA members
    (6) members -> pair .

    COMMA           shift and go to state 13
    RBRACE          reduce using rule 6 (members -> pair .)


state 10

    (7) pair -> STRING . COLON value

    COLON           shift and go to state 14


state 11

    (2) elements -> object COMMA elements .

    RBRACKET        reduce using rule 2 (elements -> object COMMA elements .)


state 12

    (4) object -> LBRACE members RBRACE .

    COMMA           reduce using rule 4 (object -> LBRACE members RBRACE .)
    RBRACKET        reduce using rule 4 (object -> LBRACE members RBRACE .)
    RBRACE          reduce using rule 4 (object -> LBRACE members RBRACE .)


state 13

    (5) members -> pair COMMA . members
    (5) members -> . pair COMMA members
    (6) members -> . pair
    (7) pair -> . STRING COLON value

    STRING          shift and go to state 10

    pair                           shift and go to state 9
    members                        shift and go to state 15

state 14

    (7) pair -> STRING COLON . value
    (8) value -> . STRING
    (9) value -> . NUMBER
    (10) value -> . object
    (4) object -> . LBRACE members RBRACE

    STRING          shift and go to state 16
    NUMBER          shift and go to state 18
    LBRACE          shift and go to state 5

    value                          shift and go to state 17
    object                         shift and go to state 19

state 15

    (5) members -> pair COMMA members .

    RBRACE          reduce using rule 5 (members -> pair COMMA members .)


state 16

    (8) value -> STRING .

    COMMA           reduce using rule 8 (value -> STRING .)
    RBRACE          reduce using rule 8 (value -> STRING .)


state 17

    (7) pair -> STRING COLON value .

    COMMA           reduce using rule 7 (pair -> STRING COLON value .)
    RBRACE          reduce using rule 7 (pair -> STRING COLON value .)


state 18

    (9) value -> NUMBER .

    COMMA           reduce using rule 9 (value -> NUMBER .)
    RBRACE          reduce using rule 9 (value -> NUMBER .)


state 19

    (10) value -> object .

    COMMA           reduce using rule 10 (value -> object .)
    RBRACE          reduce using rule 10 (value -> object .)

